tests/negative/regression/r16.orng
fn main ( ) -> Int { 
    & mut ? if & mut [ ] & ? { } { }
} 